force-app/main/default/objects/Libro__c/fields/Autor__c.field-meta.xml
<CustomField>
    <fullName>Autor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autor del Libro</label>
    <referenceTo>Autor__c</referenceTo>
    <relationshipLabel>Libros</relationshipLabel>
    <relationshipName>Libros1</relationshipName>
    <type>Lookup</type>
</CustomField>