force-app/main/default/objects/Libro__c/fields/Editorial__c.field-meta.xml
<CustomField>
    <fullName>Editorial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Editorial</label>
    <referenceTo>Editorial__c</referenceTo>
    <relationshipLabel>Libros</relationshipLabel>
    <relationshipName>Libros1</relationshipName>
    <type>Lookup</type>
</CustomField>