force-app/main/default/objects/Libro__c/fields/Si__c.field-meta.xml
<CustomField>
    <fullName>Si__c</fullName>
    <label>Si</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XV</fullName>
                <default>true</default>
                <label>XV</label>
            </value>
            <value>
                <fullName>XVI</fullName>
            </value>
            <value>
                <fullName>XVII</fullName>
            </value>
            <value>
                <fullName>XVIII</fullName>
            </value>
            <value>
                <fullName>XIX</fullName>
            </value>
            <value>
                <fullName>XX</fullName>
            </value>
            <value>
                <fullName>XXI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>